kubernetes/devicemanagement-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: devicemanagement
  labels:
    name: devicemanagement
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: devicemanagement
    spec:
      containers:
      - name: devicemanagement
        image: ranjanprj/devicemanagement:latest
      restartPolicy: Always
