kubernetes/ui-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ui
  labels:
    name: ui
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: ranjanprj/ui:latest
      restartPolicy: Always
