kubernetes/usermanagement-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: usermanagement
  labels:
    name: usermanagement
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: usermanagement
    spec:
      containers:
      - name: usermanagement
        image: ranjanprj/usermanagement:latest
      restartPolicy: Always
