kubernetes/devicemanagement-service.yml
apiVersion: v1
kind: Service
metadata:
  name: devicemanagement
  labels:
    service: devicemanagement
spec:
  selector:
    app: devicemanagement
  ports:
  - port: 5002
    targetPort: 5000
