kubernetes/ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    service: ui
  name: ui
spec:
  selector:
    app: ui
  ports:
  - port: 8080
    targetPort: 5000
